Fixed Spacing Issues

--- a/styles.scss
+++ b/styles.scss
@@ -165,7 +165,7 @@ html.transition *:after {
   background: var(--clr-light);
   color: var(--clr-dark);
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 .text-link {
@@ -180,7 +180,7 @@ html.transition *:after {
 .text-link h3 {
   padding: 0 1.2rem;
   text-align: center;
-  width: 150px;
+  width: 200px;
   border-radius: 25px;
   box-shadow: -9px -9px 9px 0 var(--light-neumorphic),
     9px 9px 9px 0 var(--neumorphic-shadow);
@@ -319,7 +319,7 @@ html.transition *:after {
     color: #25abf8;
     padding: 1.2rem 1.3rem;
     border-radius: 30px;
-    margin-top: 1.2rem;
+    margin: 1.2rem;
     box-shadow: -9px -9px 9px 0 var(--light-neumorphic),
       9px 9px 9px 0 var(--neumorphic-shadow);
     &:hover {
@@ -373,6 +373,9 @@ footer {
   .intro {
     background-position: center;
     color: #eee;
+  }
+  .intro-text {
+    line-height: initial;
   }
   .movies__more {
     font-size: 1rem !important;
